# CppTasks

./: CMakeLists.txt  vector  vector.cpp  vector.h  vector.hpp
test/: CMakeLists.txt  vectorTests.cpp
